add default settings to profiles.yml

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,6 +1,8 @@
 name: 'heap'
 version: '1.0'
 
+profile: 'default'
+
 source-paths: ["models"]   # paths with source code to compile
 analysis-paths: ["analysis"] # path with analysis files which are compiled, but not run
 target-path: "target"      # path for compiled code
